--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous"
   />
+  <script src="index.jsx"></script>
     <title>React App</title>
   </head>
   <body>
