created bcomponents tos display blog content and videos in the frontend,as well as form and validation

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     
-
+<!--Built By Chebesi Awah  237677972126-->
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
